hestu and seed graphics added, styling complete, little tweaks

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+
+    <img src="assets/hestustand.png" id="hestuimg">
+    </div>
     <div id="hestunametag">Hestu</div>
     <div id="hestu">
 
@@ -25,6 +28,7 @@
     <div id="korok">
         <div id="yahaha"></div>
         <div id="givenextclue" onclick="giveNextClue()"></div>
+        <img src="assets/korokseed.png" id="korokseed" onclick="giveNextClue()">
     </div>
 
     <div id="clue">
@@ -37,6 +41,7 @@
             in the Sacred Grotto!</div>
     </div>
 
+
     <input type="text" id="codeinput">
     <button id="submitbutton1" onclick="checkCode('pya')">Check</button>
     <button id="submitbutton2" onclick="checkCode('hat')">Check</button>
@@ -45,6 +50,7 @@
     <button id="submitbutton5" onclick="checkCode('bi')">Check</button>
     <div id="blankerror">Waaa! You have to enter the secret code!</div>
     <div id="incorrect">Shalaka?! Oh no...try again!</div>
+
 
 
 
